# maxlang

./: .gitignore  Cargo.toml  README.org  expander.rkt  flake.nix  lexer-test.rkt  lexer.rkt  main.rkt  parse-only.rkt  parser-test.rkt  parser.rkt  test.rkt  tokeniser.rkt
src/: compiler.rs  expression.rs  fac.maxlang  fibby.maxlang  frame.rs  gc.rs  heap.rs  main.rs  native_function.rs  old_compiler.rs  opcode.rs  other.maxlang  parser.rs  tokeniser.rs  value.rs  vm.rs
src/memory/: hashmap.rs
src/programs/: closure_capture.maxlang  curry.maxlang  fac.maxlang  fac.py  fib.maxlang  lists.maxlang
